2003-05-12  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Release 1.8.1
	* configure.in: Release 1.8.1

2003-04-14  Christian Stimming  <chs@ckiste.holstenstr>

	* help/de_DE/gnucash-help.xml: Updated some new German
	translations.

2003-03-11  Christian Stimming  <stimming@tuhh.de>

	* help/C/gnucash-help.xml: Clarified some small issues that
	Andreas Fahle pointed out.

	* help/de_DE/gnucash-help.xml: Greatly updated German translation
	by Andreas Fahle <fahle@web.de>

2003-03-01  Christian Stimming  <stimming@tuhh.de>

	* help/de_DE/gnucash-help.xml: Updated German translation by
	Andreas Fahle <fahle@web.de>

2003-02-09  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnucash-help.xml: correct typo

2003-02-02  Chris Lyttle  <chris@wilddev.net>

	* configure.in: release 1.8.0
	* NEWS: add release notes
	* README: update for release
	* gnucash-docs.spec.in: require gnucash 1.8.0
	* guide/C/gnucash-guide-C.omf: update for release
	* guide/C/gnucash-guide.xml: update for release
	* help/C/gnucash-help-C.omf: update for release
	* help/C/gnucash-help.xml: update for release
	* help/de_DE/gnucash-help-de_DE.omf: update for release
	* help/de_DE/gnucash-help.xml: update for release

2003-01-27  Chris Lyttle  <chris@wilddev.net>

	* configure.in: release 1.7.8
	* NEWS: add release notes

2003-01-26  Chris Lyttle  <chris@wilddev.net>

	* xsl/general-customization.xsl: change to point at internal version
	  of docbook-xsl 1.45 stylesheets.
	* xsl/1.45: copy of required portions of docbook-xsl 1.45

2003-01-26  Chris Lyttle  <chris@wilddev.net>

	* configure.in: correct stupid typo's

2003-01-25  Chris Lyttle  <chris@wilddev.net>

	* configure.in: add patch from RedHat for db4 support

2003-01-05  Chris Lyttle  <chris@wilddev.net>

	* guide/C/gnucash-guide-C.omf: Update version and date
	* guide/C/gnucash-guide.xml: remove appversion, add GFDL
	* help/C/gnucash-help-C.omf: Update version and date
	* help/C/gnucash-help.xml: remove appversion, manrevision from title