@@ -2644,7 +2644,7 @@
         <sect4 id="reg-summary">
           <title>Zusammenfassungs-Leiste</title>
           <para />
-          <para>Die Zusammenfassungs-Leiste zeigt verschiedene Salden, die zum aktuell geöffneten Konto gehören, auf einen Blick an. Im Normalfall werden zu einem Konto der tagesaktuelle Saldo, ein möglicher zukünftiger Saldo, ein Saldo für bestätigte Einträge und ein abgeglichener Saldo angezeigt. Eine Ausnahme bilden Depotkonten, hier erscheint stattdessen die Summe der Anteile und deren aktueller Wert. Mit dem Menübefehl "Zusammenfassung" im Menü "Ansicht" kann die Zusammenfassungs-Leiste ein- und ausgeblendet werden.</para>
+          <para>Die Zusammenfassungs-Leiste zeigt verschiedene Salden, die zum aktuell geöffneten Konto gehören, auf einen Blick an. Im Normalfall werden zu einem Konto der tagesaktuelle Saldo, ein möglicher zukünftiger Saldo, ein Saldo für bestätigte Einträge und ein abgeglichener Saldo angezeigt. Eine Ausnahme bilden Aktienkonten, hier erscheint stattdessen die Summe der Anteile und deren aktueller Wert. Mit dem Menübefehl "Zusammenfassung" im Menü "Ansicht" kann die Zusammenfassungs-Leiste ein- und ausgeblendet werden.</para>
         </sect4>
         <sect4 id="reg-main">
           <title>Liste der Geschäftsvorgänge</title>
@@ -3211,7 +3211,7 @@
         <sect4 id="tool-price">
           <title>Preis-Editor</title>
           <para />
-          <para>Der Preis-Editor dient zur Pflege der Werte für Währungs-, Investmentfonds- und Depotkonten. Er besitzt eine einheitliche Oberfläche zur Aktualisierung der Kurswerte und ermöglicht die Aktualisierung sowohl manuell als auch durch Online-Kurse.</para>
+          <para>Der Preis-Editor dient zur Pflege der Werte für Währungs-, Investmentfonds- und Aktienkonten. Er besitzt eine einheitliche Oberfläche zur Aktualisierung der Kurswerte und ermöglicht die Aktualisierung sowohl manuell als auch durch Online-Kurse.</para>
           <para />
           <para>Jeder Eintrag im Preis-Editor repräsentiert einen Kursdatensatz eines Wertpapiers bzw. einer Währung:</para>
           <para />
@@ -3277,12 +3277,12 @@
           <para />
           <para>Um einen einzigen Kurs zu entfernen, markieren Sie den Kurs und wählen Sie "Entfernen". Wenn Sie alle Kurse entfernen wollen, die älter als ein bestimmtes Datum sind, wählen Sie "Alte entfernen..." und geben Sie im Dialogfenster das Datum ein.</para>
           <para />
-          <para>Um für ein bestimmtes Depot- oder Investmentfonds-Konto Online-Kurse zu verwenden, müssen Sie zunächst die Online-Aktualisierung aktivieren und eine Preisquelle auswählen. Einzelheiten hierzu finden Sie im Unterabschnitt "Neues Konto erstellen" des Abschnitts "Konten erstellen und bearbeiten". Sobald Online-Kurse aktiviert sind, können Sie mit dem Knopf "Kurse abrufen" die Kurse für Aktien und Investmentfonds aktualisieren.</para>
+          <para>Um für ein bestimmtes Aktien- oder Investmentfonds-Konto Online-Kurse zu verwenden, müssen Sie zunächst die Online-Aktualisierung aktivieren und eine Preisquelle auswählen. Einzelheiten hierzu finden Sie im Unterabschnitt "Neues Konto erstellen" des Abschnitts "Konten erstellen und bearbeiten". Sobald Online-Kurse aktiviert sind, können Sie mit dem Knopf "Kurse abrufen" die Kurse für Aktien und Investmentfonds aktualisieren.</para>
         </sect4>
         <sect4 id="tool-commodity">
           <title>Währungs-/Aktien-Editor</title>
           <para />
-          <para>Der Währungs-/Aktien-Editor dient zum Anlegen und Bearbeiten von Wertpapieren, welche von Investmentfonds- und Depotkonten verwendet werden. Weiterhin kann er die Details der nationalen Währungen, die von GnuCash verwendet werden, anzeigen.</para>
+          <para>Der Währungs-/Aktien-Editor dient zum Anlegen und Bearbeiten von Wertpapieren, welche von Investmentfonds- und Aktienkonten verwendet werden. Weiterhin kann er die Details der nationalen Währungen, die von GnuCash verwendet werden, anzeigen.</para>
           <para />
           <para>Jeder Eintrag repräsentiert ein Wertpapier mit den folgenden Detailinformationen:</para>
           <para />
@@ -5068,7 +5068,7 @@
               </row>
              <row>
                 <entry>
-                  <para>Depot</para>
+                  <para>Aktienkonto</para>
                 </entry>
                 <entry>
                   <para>Aktien oder Anteile an einer Gesellschaft, die den Eigentümer an all ihren Gewinnen und Risiken beteiligen.</para>
@@ -5189,7 +5189,7 @@
             <para>Investmentfonds: Unterkonto können alle Konten außer Eigenkapital-, Aufwands- und Ertragskonten sein.</para>
           </listitem>
           <listitem>
-            <para>Depot: Unterkonto können alle Konten außer Eigenkapital-, Aufwands- und Ertragskonten sein.</para>
+            <para>Aktienkonto: Unterkonto können alle Konten außer Eigenkapital-, Aufwands- und Ertragskonten sein.</para>
           </listitem>
         </itemizedlist>
         <para />
@@ -5239,7 +5239,7 @@
         <sect4 id="gen-info">
           <title>Allgemeine Information</title>
           <para />
-          <para>Die Karteiseite "Allgemeines" dient zur Pflege der grundlegenden Angaben zum Konto. Hier steht auch die Möglichkeit zur Verfügung, das Konto mit einer Börsenkursquelle zu verknüpfen, falls es sich um ein Währungs-, Investmentfonds- oder Depotkonto handelt. Weiterhin kann das Konto als steuerrelevant und als Platzhalterkonto gekennzeichnet werden. </para>
+          <para>Die Karteiseite "Allgemeines" dient zur Pflege der grundlegenden Angaben zum Konto. Hier steht auch die Möglichkeit zur Verfügung, das Konto mit einer Börsenkursquelle zu verknüpfen, falls es sich um ein Währungs-, Investmentfonds- oder Aktienkonto handelt. Weiterhin kann das Konto als steuerrelevant und als Platzhalterkonto gekennzeichnet werden. </para>
           <para />
           <para>Die Karteiseite besitzt fünf Eingabebereiche. Darunter befinden sich Kontrollkästchen, um ein Konto als steuerrelevant oder als Platzhalterkonto zu kennzeichnen. Die Option "steuerrelevant" bedeutet, dass dieses Konto für die Aufnahme in die Steuerberichte und -exporte markiert ist. Diese Option sollten Sie nur für Ertrags- und Aufwandskonten aktivieren. Die Option "Platzhalter" bedeutet, dass dieses Konto nicht für Buchungsdaten verwendet wird. Dies wird gebraucht, um eine Kontohierarchie anlegen zu können.</para>
           <para />
@@ -5253,7 +5253,7 @@
               <para>Beschreibung: Eine optionale Beschreibung des Kontos.</para>
             </listitem>
             <listitem>
-              <para>Währung/Aktie: Für die meisten Konten ist dies die Standardwährung, d.h. Ihre Landeswährung, z.B. "EUR (Euro)". Falls das Konto für eine Fremdwährung vorgesehen ist, benutzen Sie den Knopf "Auswählen..." und wählen Sie im folgenden Auswahldialog eine andere Währung. Falls es sich um ein Investmentfonds- oder Depotkonto handelt, benutzen Sie den Knopf "Auswählen", um ein Wertpapier auszuwählen. </para>
+              <para>Währung/Aktie: Für die meisten Konten ist dies die Standardwährung, d.h. Ihre Landeswährung, z.B. "EUR (Euro)". Falls das Konto für eine Fremdwährung vorgesehen ist, benutzen Sie den Knopf "Auswählen..." und wählen Sie im folgenden Auswahldialog eine andere Währung. Falls es sich um ein Investmentfonds- oder Aktienkonto handelt, benutzen Sie den Knopf "Auswählen", um ein Wertpapier auszuwählen. </para>
             </listitem>
             <listitem>
               <para>Auswahl der Währung oder Aktie: Um eine andere Währung auszuwählen, klicken Sie die Dropdown-Liste "Währung/Aktie" an und wählen Sie das gewünschte Währungskürzel. Um ein Wertpapier für Investmentfonds- oder Aktienkonten anzulegen, wählen Sie den Knopf "Neu...", um das Dialogfenster "Neue Währung/Aktie" zu öffnen. Nachdem ein Wertpapier angelegt worden ist, können Sie zuerst den Typ in der Dropdown-Liste "Typ" (normalerweise die Börse, an der das Papier gehandelt wird) und dann den Namen des Wertpapiers in der Dropdown-Liste "Währung/Aktie" auswählen.</para>
@@ -5274,7 +5274,7 @@
           <para />
           <itemizedlist>
             <listitem>
-              <para>Börsenkurse online abrufen: Diese Option steht nur dann zur Verfügung, wenn die Kontoart "Währung", "Investmentfonds" oder "Depot" ist. Sie bewirkt, dass für dieses Konto die Kurse von einer Online-Datenquelle herauntergeladen werden können.</para>
+              <para>Börsenkurse online abrufen: Diese Option steht nur dann zur Verfügung, wenn die Kontoart "Währung", "Investmentfonds" oder "Aktienkonto" ist. Sie bewirkt, dass für dieses Konto die Kurse von einer Online-Datenquelle herauntergeladen werden können.</para>
             </listitem>
             <listitem>
               <para>Quelle der Börsenkurse: Wählen Sie eine Datenquelle für die
@@ -5755,7 +5755,7 @@
             </listitem>
           </itemizedlist>
           <para />
-          <para>Auf der nächsten Seite können Sie ein Depotkonto auswählen. Wählen Sie das Konto aus der Liste aus, für welches Sie eine Aktienteilung oder einen Aktienzusammenschluss erfassen wollen.</para>
+          <para>Auf der nächsten Seite können Sie ein Aktienkonto auswählen. Wählen Sie das Konto aus der Liste aus, für welches Sie eine Aktienteilung oder einen Aktienzusammenschluss erfassen wollen.</para>
           <para />
           <itemizedlist>
             <listitem>
@@ -5906,7 +5906,7 @@
               <para>Das nächste Feld dient zum Abgleichen von Konten. Eine Beschreibung hierzu finden Sie im Abschnitt "Konto mit einem Kontoauszug abgleichen" weiter oben.</para>
             </listitem>
             <listitem>
-              <para>Bewegen Sie den Cursor mit der Tabulatortaste zum ersten Betragsfeld. Die Bezeichnungen der beiden Betragsspalten sind je nach Kontoart unterschiedlich. So heißen sie bei Bankkonten "Einzahlung" und "Abhebung", bei Kreditkartenkonten "Zahlung" und "Belastung", und bei Depotkonten gibt es die Spalten "Anteile", "Preis", "Kauf" und "Verkauf".</para>
+              <para>Bewegen Sie den Cursor mit der Tabulatortaste zum ersten Betragsfeld. Die Bezeichnungen der beiden Betragsspalten sind je nach Kontoart unterschiedlich. So heißen sie bei Bankkonten "Einzahlung" und "Abhebung", bei Kreditkartenkonten "Zahlung" und "Belastung", und bei Aktienkonten gibt es die Spalten "Anteile", "Preis", "Kauf" und "Verkauf".</para>
             </listitem>
             <listitem>
               <para>Geben Sie den Betrag für den Geschäftsvorgang in das korrekte Feld ein. Durch Drücken der Eingabetaste, durch Anklicken des Symbols "Eingeben" oder mit dem Menübefehl "Aktionen" -&gt; "Übernehmen" schließen Sie die Eingabe des Geschäftsvorgangs ab. Durch Anklicken des Symbols "Abbrechen" oder mit dem Menübefehl "Aktionen" -&gt; "Abbrechen" wird der Geschäftsvorgang gelöscht.</para>
@@ -5981,7 +5981,7 @@
               <para>Das nächste Feld dient zum Abgleichen von Konten. Eine Beschreibung hierzu finden Sie im Abschnitt "Konto mit einem Kontoauszug abgleichen" weiter oben.</para>
             </listitem>
             <listitem>
-              <para>Bewegen Sie den Cursor mit der Tabulatortaste zum ersten Betragsfeld. Die Bezeichnungen der beiden Betragsspalten sind je nach Kontoart unterschiedlich. So heißen sie bei Bankkonten "Einzahlung" und "Abhebung", bei Kreditkartenkonten "Zahlung" und "Belastung", und bei Depotkonten gibt es die Spalten "Anteile", "Preis", "Kauf" und "Verkauf".</para>
+              <para>Bewegen Sie den Cursor mit der Tabulatortaste zum ersten Betragsfeld. Die Bezeichnungen der beiden Betragsspalten sind je nach Kontoart unterschiedlich. So heißen sie bei Bankkonten "Einzahlung" und "Abhebung", bei Kreditkartenkonten "Zahlung" und "Belastung", und bei Aktienkonten gibt es die Spalten "Anteile", "Preis", "Kauf" und "Verkauf".</para>
             </listitem>
           <listitem>
             <para>Geben Sie den Gesamtbetrag des Geschäftsvorgangs in das korrekte Feld ein. </para>
