@@ -1,3 +1,8 @@
+2003-05-30  Christian Stimming  <stimming@tuhh.de>
+
+	* help/de_DE/gnucash-help.xml: Change German translation of
+	"depot" to "Aktienkonto".
+
 2003-05-12  Chris Lyttle  <chris@wilddev.net>
 
 	* NEWS: Release 1.8.1
